--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 id = "verification_heading">Verify Your Account</h1>
+	<p id="verification_subtext">
+		We emailed you six digit code to acciojob@email.com Enter the below to comfirm your email address
+	</p>
+	<div class = "code-container">
+		<input class="code" type="number"  id="code-0" maxlength="1" oninput="handleInput(this)" autofocus placeholder="0"/>
+		<input class="code" type="number"  id="code-1" maxlength="1" oninput="handleInput(this)" placeholder="0"/>
+		<input class="code" type="number"  id="code-2" maxlength="1" oninput="handleInput(this)"placeholder="0"/>
+		<input class="code"type="number"   id="code-3" maxlength="1" oninput="handleInput(this)"placeholder="0"/>
+		<input class="code"type="number"   id="code-4" maxlength="1" oninput="handleInput(this)"placeholder="0"/>
+		<input class="code"type="number"   id="code-5" maxlength="1" oninput="handleInput(this)"placeholder="0"/>
+	</div>
+	<div class="footer">
+		This is design only. We didn't actually send you an email as we dont have your email, right?
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
